--- a/m/bb.html
+++ b/m/bb.html
@@ -36,9 +36,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">전국 숙박 할인권<br>받을 수 있는지 확인하세요!</h1>
+                <h1 class="main-title">하루 10만 원, 진짜 가능? 2025년 최신 스마트폰 부업 앱 TOP 5 공개</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">최대 7만원 숙박 할인!<br>최대 7만원 숙박 할인, 나도 받을 수 있을까? 1분 자격 테스트로 내 여행 할인권을 바로 확인하세요! 전국 어디서나 사용 가능한 특별 혜택, 지금 바로 체크하고 알뜰하게 여행을 즐기세요</p>
+                <p class="sub-title">스마트폰만 있으면 나도 부업 가능? 1분 테스트로 내게 꼭 맞는 수익형 앱을 바로 추천받아보세요! 지금 시작해서 숨겨진 수입의 기회를 잡으세요.</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
@@ -47,6 +47,7 @@
                     </div>
                 </div>
             </div>
+
 
             <!-- 질문 페이지 -->
             <div class="question-page hidden" id="questionPage">
