--- a/m/dd.html
+++ b/m/dd.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fch8a99%2FbtsN9HYgdMd%2FC4ePZELkKsZaXZviVa1KX1%2Fimg.png" alt="표시된 이미지">
+        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fnrj3u%2FbtsN8v5Fx89%2FrbPkmMZvDs4xKV6mRrN1L1%2Fimg.png" alt="표시된 이미지">
     </div>
     <script>
         document.addEventListener('contextmenu', function(e) {
@@ -36,9 +36,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">전국 숙박 할인권<br>받을 수 있는지 확인하세요!</h1>
+                <h1 class="main-title">내 돈인데 안 받으면 손해! 통신비 미환급금 신청 꿀팁 공개</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">최대 7만원 숙박 할인!<br>최대 7만원 숙박 할인, 나도 받을 수 있을까? 1분 자격 테스트로 내 여행 할인권을 바로 확인하세요! 전국 어디서나 사용 가능한 특별 혜택, 지금 바로 체크하고 알뜰하게 여행을 즐기세요</p>
+                <p class="sub-title">혹시 나도 통신비 환급금을 놓치고 있었을까? 본인 명의 휴대폰만 있으면 1분 만에 숨겨진 내 돈을 바로 확인하고 간편하게 신청할 수 있습니다. 지금 바로 내 환급금 찾아가세요!</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
