--- a/m/ff.html
+++ b/m/ff.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fch8a99%2FbtsN9HYgdMd%2FC4ePZELkKsZaXZviVa1KX1%2Fimg.png" alt="표시된 이미지">
+        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbfasBm%2FbtsN9FF62xk%2FVfHFCL2MfRDwrPw3CBHoqK%2Fimg.png" alt="표시된 이미지">
     </div>
     <script>
         document.addEventListener('contextmenu', function(e) {
@@ -36,9 +36,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">전국 숙박 할인권<br>받을 수 있는지 확인하세요!</h1>
+                <h1 class="main-title">당신이 받을 수 있는<br>모든 정부지원금 혜택 알아보기</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">최대 7만원 숙박 할인!<br>최대 7만원 숙박 할인, 나도 받을 수 있을까? 1분 자격 테스트로 내 여행 할인권을 바로 확인하세요! 전국 어디서나 사용 가능한 특별 혜택, 지금 바로 체크하고 알뜰하게 여행을 즐기세요</p>
+                <p class="sub-title">매월 최대 70만원까지 받을 수 있는 혜택!<br>한 달에 최대 70만 원 지원금, 나도 받을 수 있을까? 1분만 투자해 간단한 자격 테스트로 내게 꼭 맞는 정부 지원금을 바로 확인하세요! 놓치면 후회할 수 있는 내 권리, 지금 바로 확인해보세요</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
