--- a/m/ii.html
+++ b/m/ii.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FYR2Y6%2FbtsN7ZsUnaW%2FGbElX3kQB1rbMVDrmgjyW0%2Fimg.png" alt="표시된 이미지">
+        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fb3rqrG%2FbtsN8GF836Y%2FSfJZiDitKOkA5fcJsOz620%2Fimg.png" alt="표시된 이미지">
     </div>
     <script>
         document.addEventListener('contextmenu', function(e) {
@@ -36,9 +36,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">조기폐차 지원금<br>받을 수 있는지 확인하세요!</h1>
+                <h1 class="main-title">전국 숙박 할인권<br>받을 수 있는지 확인하세요!</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">최대 800만원 지원금!<br>내 차가 조기폐차 보조금 대상인지 확인해보세요. 1분만에 간단하게 자격조건을 체크할 수 있습니다.</p>
+                <p class="sub-title">최대 7만원 숙박 할인!<br>최대 7만원 숙박 할인, 나도 받을 수 있을까? 1분 자격 테스트로 내 여행 할인권을 바로 확인하세요! 전국 어디서나 사용 가능한 특별 혜택, 지금 바로 체크하고 알뜰하게 여행을 즐기세요</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
