--- a/m/jj.html
+++ b/m/jj.html
@@ -36,9 +36,9 @@
         <div class="test-container">
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
-                <h1 class="main-title">전국 숙박 할인권<br>받을 수 있는지 확인하세요!</h1>
+                <h1 class="main-title">귀농·귀촌 체험<br>지원금 받고 새로운 삶 시작하기!</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">최대 7만원 숙박 할인!<br>최대 7만원 숙박 할인, 나도 받을 수 있을까? 1분 자격 테스트로 내 여행 할인권을 바로 확인하세요! 전국 어디서나 사용 가능한 특별 혜택, 지금 바로 체크하고 알뜰하게 여행을 즐기세요</p>
+                <p class="sub-title">귀농·귀촌 체험하고 매월 지원금까지! 1분만에 신청 자격을 확인해보세요. 도시를 떠나 새로운 삶을 시작할 수 있는 기회!.</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
